# diploma

./: .env.example  .gitignore  .pylintrc  pyproject.toml
docs/diagrams/: Activity Diagram (EN).drawio  Activity Diagram (RU).drawio  Class Diagram copy.drawio  Class Diagram.drawio
docs/notebooks/: audio_read.ipynb  pitch_estimation.ipynb  xml_parse.ipynb
docs/presentations/: 2021-04-28 (RU).pptx  a.pptx
docs/reports/: .~lock.Practice Report.docx#  Characteristic Report.docx  My.docx  Plan Report.docx  Practice Report Title.docx  Practice Report.docx  Task Report.docx  VKR.docx
src/core/base/: __init__.py  command.py  error.py  interactor.py  result.py
src/core/commands/: __init__.py  model_commands.py
src/core/constants/: __init__.py  command_types.py  event_types.py
src/core/contracts/: __init__.py  converter.py  model.py
src/core/entities/: __init__.py  interaction.py  model.py  note.py  tab.py  time_interval.py
src/core/errors/: __init__.py  not_equal_entities.py  not_signal.py
src/core/interactions/: __init__.py  fetch_signal.py  read_file.py  transform_data.py
src/core/interactor/: __init__.py  interactor.py  model_fabric.py
src/core/messaging/: __init__.py  command.py  event.py  request.py  response.py
src/infrastructure/models/: onset_detection.py  p.py  pitch_estimation.py  transformer.py
src/notebooks/: audio_read.ipynb  pitch_estimation.ipynb  xml_parse.ipynb
